Bug 482119 - Opening new tab in yakuake does not bring it in a focus.
Summary: Opening new tab in yakuake does not bring it in a focus.
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords: qt6
: 480766 483324 483714 483903 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-01 07:41 UTC by Jetchko Jekov
Modified: 2024-03-19 05:44 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
error while try to move between tabs (29.70 KB, image/png)
2024-03-01 11:43 UTC, Jetchko Jekov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jetchko Jekov 2024-03-01 07:41:54 UTC
SUMMARY
The new open tab in yakuake does not have a focus. It does not matter if it is triggered via hotkey or clicking '+'  via mouse.


STEPS TO REPRODUCE
1. Open a new tab

OBSERVED RESULT
Not focused

EXPECTED RESULT
The new tab should have a focus

SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-21-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-1065G7 CPU @ 1.30GHz
Memory: 31.1 GiB of RAM
Graphics Processor: Mesa Intel® Iris® Plus Graphics
Manufacturer: Dell Inc.
Product Name: Inspiron 14 5401
Comment 1 Jetchko Jekov 2024-03-01 11:43:54 UTC
Created attachment 166248 [details]
error while try to move between tabs
Comment 2 Jetchko Jekov 2024-03-01 11:44:28 UTC
Actually, the situation is "interesting":
If I hit <SPACEBAR> in the new unfocused tab the subshell is spawned and the tab gets focus.
In this case, when I try to move between tabs with hotkeys I get the error shown in the attachment.
If I leave the subshell (still staying in the newly opened tab) I can use hotkeys to move between tabs.

For testing, I moved away both my .bashrc and .bash_profile to rule out something in them triggers this effect but there was not change.
This all started with the recent upgrade to Plasma 6, There were no issues before the upgrade.
Comment 3 Nicolas Fella 2024-03-08 23:11:35 UTC
I can't reproduce this, it works fine for me
Comment 4 Christian Muehlhaeuser 2024-03-10 08:16:54 UTC
Can reproduce this. Provided a fix in https://invent.kde.org/utilities/yakuake/-/merge_requests/121
Comment 5 Jetchko Jekov 2024-03-10 10:02:52 UTC
(In reply to Christian Muehlhaeuser from comment #4)
> Can reproduce this. Provided a fix in
> https://invent.kde.org/utilities/yakuake/-/merge_requests/121

Thank you, Christian. That was a very annoying and frustrating (to me) problem.
I can confirm this fixes it.
Comment 6 Nicolas Fella 2024-03-10 10:28:29 UTC
Git commit f9382a1955100934e0e7d4ca4110c99b0547b6ec by Nicolas Fella, on behalf of Christian Muehlhaeuser.
Committed on 10/03/2024 at 10:27.
Pushed by nicolasfella into branch 'master'.

Fix focusing new sessions

The part widget needs to be added to the parent before it can gain
focus.

M  +1    -2    app/session.cpp

https://invent.kde.org/utilities/yakuake/-/commit/f9382a1955100934e0e7d4ca4110c99b0547b6ec
Comment 7 Nicolas Fella 2024-03-10 10:31:11 UTC
Git commit a185d9662519d7b81f3d8a2215d9e94cf81fe161 by Nicolas Fella, on behalf of Christian Muehlhaeuser.
Committed on 10/03/2024 at 10:31.
Pushed by nicolasfella into branch 'release/24.02'.

Fix focusing new sessions

The part widget needs to be added to the parent before it can gain
focus.
(cherry picked from commit f9382a1955100934e0e7d4ca4110c99b0547b6ec)

M  +1    -2    app/session.cpp

https://invent.kde.org/utilities/yakuake/-/commit/a185d9662519d7b81f3d8a2215d9e94cf81fe161
Comment 8 Christian Muehlhaeuser 2024-03-12 02:58:54 UTC
*** Bug 480766 has been marked as a duplicate of this bug. ***
Comment 9 Christian Muehlhaeuser 2024-03-13 03:34:57 UTC
*** Bug 483324 has been marked as a duplicate of this bug. ***
Comment 10 Christian Muehlhaeuser 2024-03-16 01:22:13 UTC
*** Bug 483714 has been marked as a duplicate of this bug. ***
Comment 11 Christian Muehlhaeuser 2024-03-19 05:44:14 UTC
*** Bug 483903 has been marked as a duplicate of this bug. ***