Fix focusing new sessions

The part widget needs to be added to the parent before it can gain
focus.

BUG: 482119